# core-utils

./: README.md  pyproject.toml
core/utils/classes/: collection.py  item.py  items.py  store.py
core/utils/classes/collection/: __init__.py  collection.py  dict_collection.py
core/utils/classes/collections/: dict_collection.py
core/utils/classes/item/: item.py  items.py
core/utils/classes/store/: store.py
core/utils/enums/: operator.py
core/utils/exceptions/: __init__.py
core/utils/functions/: comparison.py
